Some js and templates
remove unnecessary jQuery hack
fix scrolling for anchors
add external.html template

--- a/tpl/_footer.html
+++ b/tpl/_footer.html
@@ -1,5 +1,5 @@
 <footer class="resume-section p-3 p-lg-5 align-items-center" id="footer" role="contentinfo">
-	<p id="gotop"><a href="#page-top">{{tpl:lang Page top}}</a></p>
+	<p id="gotop"><a class="js-scroll-trigger" href="#page-top">{{tpl:lang Page top}}</a></p>
 
 	{{tpl:SysBehavior behavior="publicInsideFooter"}}
 
@@ -7,6 +7,9 @@
 </footer>
 <!-- Bootstrap core JavaScript -->
 <script src="{{tpl:BlogThemeURL}}/vendor/bootstrap/js/bootstrap.min.js"></script>
+
+<!-- Plugins jQuery -->
+<script src="{{tpl:BlogThemeURL}}/js/jquery.easing.min.js"></script>
 
 <!-- Custom scripts for this template -->
 <script src="{{tpl:BlogThemeURL}}/js/resume.min.js"></script>
