--- a/tpl/_entry-short.html
+++ b/tpl/_entry-short.html
@@ -1,4 +1,4 @@
-<article id="p{{tpl:EntryID}}" class="post short {{tpl:EntryIfOdd}} {{tpl:EntryIfFirst}}" lang="{{tpl:EntryLang}}" role="article">
+<article id="p{{tpl:EntryID}}" class="post short {{tpl:EntryIfOdd}} {{tpl:EntryIfFirst}}" lang="{{tpl:EntryLang}}">
 
 	<header>
 		<!-- # New day date -->
