--- a/tpl/_sidebar.html
+++ b/tpl/_sidebar.html
@@ -1,4 +1,4 @@
-<aside class="resume-section p-3 p-lg-5 align-items-center" id="sidebar" role="complementary">
+<aside class="resume-section p-3 p-lg-5 align-items-center" id="sidebar">
 	<tpl:IfWidgets type="nav">
 		<div class="widgets blognav__widgets" id="blognav">
 	        <h2 class="blognav__title">{{tpl:lang Blog menu}}</h2>
