--- a/tpl/_entry-title.html
+++ b/tpl/_entry-title.html
@@ -1,4 +1,4 @@
-<article id="p{{tpl:EntryID}}" class="post {{tpl:EntryIfOdd}} {{tpl:EntryIfFirst}} title" lang="{{tpl:EntryLang}}" role="article">
+<article id="p{{tpl:EntryID}}" class="post {{tpl:EntryIfOdd}} {{tpl:EntryIfFirst}} title" lang="{{tpl:EntryLang}}">
 
 	<header>
 		<!-- # New day date -->
