--- a/tpl/_footer.html
+++ b/tpl/_footer.html
@@ -1,4 +1,4 @@
-<footer class="resume-section p-3 p-lg-5 align-items-center" id="footer" role="contentinfo">
+<footer class="resume-section p-3 p-lg-5 align-items-center" id="footer">
 	<p id="gotop"><a class="js-scroll-trigger" href="#page-top">{{tpl:lang Page top}}</a></p>
 
 	{{tpl:SysBehavior behavior="publicInsideFooter"}}
