--- a/tpl/_top.html
+++ b/tpl/_top.html
@@ -2,8 +2,7 @@
 	<a class="navbar-brand js-scroll-trigger" href="{{tpl:BlogURL}}">
 		<span class="d-block d-lg-none">{{tpl:BlogName encode_html="1"}}</span>
 		<span class="d-none d-lg-block">
-			<img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="{{tpl:BlogThemeURL}}/img/profile.jpg"
-				alt="">
+			<img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="{{tpl:BlogThemeURL}}/img/profile.jpg" alt="">
 		</span>
 	</a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -16,8 +15,7 @@
 	</div>
 </nav>
 <section class="p-3 p-lg-5 align-items-center" role="banner">
-	<h1 class="site-title"><a class="site-title__link" href="{{tpl:BlogURL}}"><span
-				class="site-title__text">{{tpl:BlogName encode_html="1"}}</span></a></h1>
+	<h1 class="site-title"><a class="site-title__link" href="{{tpl:BlogURL}}"><span class="site-title__text">{{tpl:BlogName encode_html="1"}}</span></a></h1>
 	<p class="site-baseline">{{tpl:BlogDescription}}</p>
 	<div class="social-icons">
 		<a href="#">
