--- a/tpl/contact_me.html
+++ b/tpl/contact_me.html
@@ -15,7 +15,7 @@
 
 <tpl:Block name="body-tag">
 
-    <body class="dc-contactme">
+    <body id="page-top" class="dc-contactme">
 </tpl:Block>
 
 <tpl:Block name="main-content">
