static template post-title fixed

--- a/tpl/external.html
+++ b/tpl/external.html
@@ -31,7 +31,7 @@
                         </tpl:Block>
                         <tpl:Block name="main-content">
 
-                            {{tpl:include src="_entry-full.html"}}
+                            {{tpl:include src="_simple-entry.html"}}
                         </tpl:Block> <!-- # main-content -->
                     </section> <!-- # End #content -->
                 </tpl:Block> <!-- # wrapper-main -->
