--- a/tpl/_head.html
+++ b/tpl/_head.html
@@ -11,6 +11,7 @@
 
 <!-- Custom styles for this template -->
 <link href="{{tpl:BlogThemeURL}}/css/resume.min.css" rel="stylesheet">
+{{tpl:resumeUserColors}}
 <link rel="stylesheet" type="text/css" href="{{tpl:BlogQmarkURL}}pf=print.css" media="print" />
 
 <tpl:SysIf jquery_needed="1">
