--- a/tpl/_top.html
+++ b/tpl/_top.html
@@ -2,7 +2,7 @@
 	<a class="navbar-brand js-scroll-trigger" href="{{tpl:BlogURL}}">
 		<span class="d-block d-lg-none">{{tpl:BlogName encode_html="1"}}</span>
 		<span class="d-none d-lg-block">
-			<img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="{{tpl:BlogThemeURL}}/img/profile.jpg" alt="">
+			<img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="{{tpl:resumeUserImageSrc}}" alt="">
 		</span>
 	</a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
