Clean up unused translation files

--- a/locales/fr/help/help.html
+++ b/locales/fr/help/help.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Configuration du thème Éditorial</title>
+  <title>Configuration du thème Resume</title>
 </head>
 
 <body>
