--- a/locales/fr/help/help.html
+++ b/locales/fr/help/help.html
@@ -11,6 +11,6 @@
 
 <h4>Couleur principale</h4>
 
-<p>Choissez votre couleur principale et enregistrez. La valeur par défaut est <strong>#bd5d38</strong>.</p>
+<p>Choissez votre couleur principale et enregistrez. La valeur par défaut est <strong>#BD5D38</strong>.</p>
 </body>
 </html>
