--- a/locales/en/help/help.html
+++ b/locales/en/help/help.html
@@ -1,4 +1,4 @@
-<html>
+#BD5D38<html>
 <head>
   <title>Resume Theme Configuration</title>
 </head>
@@ -11,6 +11,6 @@
 
 <h4>Main color</h4>
 
-<p>Choose a color for sidebar, links and buttons, and save. Default color is <strong>#bd5d38</strong>.</p>
+<p>Choose a color for sidebar, links and buttons, and save. Default color is <strong>#BD5D38</strong>.</p>
 </body>
 </html>
