--- a/locales/en/help/help.html
+++ b/locales/en/help/help.html
@@ -1,4 +1,4 @@
-#BD5D38<html>
+<html>
 <head>
   <title>Resume Theme Configuration</title>
 </head>
@@ -7,10 +7,10 @@
 
 <h4>Profile image</h4>
 
-<p>You can choose the image that will appear on the left sidebar. Copy the image URL and paste it into the field. If you do not choose any image, the default image will be displayed.</p>
+<p>You can choose the left sidebar image. Paste the image URL into the field and save. If you do not choose any image, the default image will be displayed.</p>
 
 <h4>Main color</h4>
 
-<p>Choose a color for sidebar, links and buttons, and save. Default color is <strong>#BD5D38</strong>.</p>
+<p>Choose a color for sidebar, links and buttons, and save. Default color is <strong>#BD5D38</strong></p>
 </body>
 </html>
