--- a/locales/fr/help/help.html
+++ b/locales/fr/help/help.html
@@ -7,10 +7,10 @@
 
 <h4>Image de profil</h4>
 
-<p>Vous pouvez choisir l'image qui apparaît sur le côté gauche du blog. Copiez l'URL de l'image et collez-la dans le champ, puis enregistrez. Si vous n'avez choisi aucune image, l'image par défaut sera affichée.</p>
+<p>Vous pouvez choisir l'image de la barre latérale. Collez l'URL de l'image dans le champ, puis enregistrez. Si vous n'avez choisi aucune image, l'image par défaut sera affichée.</p>
 
 <h4>Couleur principale</h4>
 
-<p>Choissez votre couleur principale et enregistrez. La valeur par défaut est <strong>#BD5D38</strong>.</p>
+<p>Choissez votre couleur principale et enregistrez. Cette couleur est utilisée pour la barre latérale, les liens et les boutons. La valeur par défaut est <strong>#BD5D38</strong></p>
 </body>
 </html>
