--- a/locales/en/help/help.html
+++ b/locales/en/help/help.html
@@ -7,7 +7,9 @@
 
 <h4>Profile image</h4>
 
-<p>You can choose the left sidebar image. Paste the image URL into the field and save. If you do not choose any image, the default image will be displayed.</p>
+<p>You can replace the left sidebar image by your own from your media manager. Click on <em>Change</em> button to choose the image and save your changes.
+  If you wish to use default profile image, click on <em>Reset</em> button.
+</p>
 
 <h4>Main color</h4>
 
