--- a/locales/fr/help/help.html
+++ b/locales/fr/help/help.html
@@ -7,7 +7,8 @@
 
 <h4>Image de profil</h4>
 
-<p>Vous pouvez choisir l'image de la barre latérale. Collez l'URL de l'image dans le champ, puis enregistrez. Si vous n'avez choisi aucune image, l'image par défaut sera affichée.</p>
+<p>Vous pouvez remplacer l'image de la barre latérale par une image de votre médiathèque. Cliquez sur le bouton <em>Changer</em>, choisissez l'image, puis enregistrez.
+   Cliquez sur le bouton <em>Réinitialiser</em> pour utiliser l'image par défaut.</p>
 
 <h4>Couleur principale</h4>
 
