--- a/tpl/_head.html
+++ b/tpl/_head.html
@@ -1,16 +1,17 @@
 <!-- # media queries -->
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-<!-- Bootstrap core CSS -->
-<link href="{{tpl:BlogThemeURL}}/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-<!-- Custom fonts for this template -->
-<link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet">
-<link href="{{tpl:BlogThemeURL}}/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+<!-- Font Awesome icons (free version)-->
+<script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
+<!-- Google fonts-->
+<link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
+<link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
+<!-- Core theme CSS (includes Bootstrap)-->
+<link href="{{tpl:BlogThemeURL}}/css/styles.css" rel="stylesheet" />
 
 <!-- Custom styles for this template -->
-<link href="{{tpl:BlogThemeURL}}/css/resume.min.css" rel="stylesheet">
+<link href="{{tpl:BlogThemeURL}}/css/dotclear.css" rel="stylesheet">
+
 {{tpl:resumeUserColors}}
 <link rel="stylesheet" type="text/css" href="{{tpl:BlogQmarkURL}}pf=print.css" media="print" />
 
