--- a/tpl/_top.html
+++ b/tpl/_top.html
@@ -5,32 +5,11 @@
 			<img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="{{tpl:resumeUserImageSrc}}" alt="">
 		</span>
 	</a>
-	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-		aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-		<span class="navbar-toggler-icon"></span>
-	</button>
+	<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
 
-	<div class="collapse navbar-collapse" id="navbarSupportedContent">
+	<div class="collapse navbar-collapse" id="navbarResponsive">
 		{{tpl:ResumeSimpleMenu class="navbar-nav" description="title"}}
 	</div>
 </nav>
-<section class="p-3 p-lg-5 align-items-center" role="banner">
-	<h1 class="site-title"><a class="site-title__link" href="{{tpl:BlogURL}}"><span class="site-title__text">{{tpl:BlogName encode_html="1"}}</span></a></h1>
-	<p class="site-baseline">{{tpl:BlogDescription}}</p>
-	<div class="social-icons">
-		<a href="#">
-			<i class="fab fa-linkedin-in"></i>
-		</a>
-		<a href="#">
-			<i class="fab fa-github"></i>
-		</a>
-		<a href="#">
-			<i class="fab fa-twitter"></i>
-		</a>
-		<a href="#">
-			<i class="fab fa-facebook-f"></i>
-		</a>
-	</div>
-</section>
-<hr class="m-0">
+
 {{tpl:SysBehavior behavior="publicTopAfterContent"}}
