--- a/tpl/_footer.html
+++ b/tpl/_footer.html
@@ -5,14 +5,12 @@
 
 	<p>{{tpl:SysPoweredBy}}</p>
 </footer>
-<!-- Bootstrap core JavaScript -->
-<script src="{{tpl:BlogThemeURL}}/vendor/bootstrap/js/bootstrap.min.js"></script>
 
-<!-- Plugins jQuery -->
-<script src="{{tpl:BlogThemeURL}}/js/jquery.easing.min.js"></script>
+<!-- Bootstrap core JS-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
 
-<!-- Custom scripts for this template -->
-<script src="{{tpl:BlogThemeURL}}/js/resume.min.js"></script>
+<!-- Core theme JS-->
+<script src="{{tpl:BlogThemeURL}}/js/scripts.js"></script>
 {{tpl:SysBehavior behavior="publicFooterContent"}}
 
 {{tpl:include src="user_footer.html"}}
