--- a/tpl/404.html
+++ b/tpl/404.html
@@ -16,6 +16,7 @@
 <tpl:Block name="body-tag"><body id="page-top" class="dc-404"></tpl:Block>
 
 <tpl:Block name="main-content">
+	<h2 class="sr-only sr-only-focusable">{{tpl:lang Error page}}</h2>
 	<header id="content-info">
 		<h2>{{tpl:lang Document not found}}</h2>
 		<p>{{tpl:lang URL you've tried has typos, or the page has been deleted or moved.}}</p>
