--- a/tpl/__layout.html
+++ b/tpl/__layout.html
@@ -94,7 +94,7 @@
 								{{tpl:Breadcrumb}}
 							</tpl:Block>
 							<tpl:Block name="main-content">
-
+								<h2 class="sr-only sr-only-focusable">{{tpl:lang Entries list}}</h2>
 								<tpl:Entries>
 
 									<!-- # First page -->
