--- a/tpl/archive_month.html
+++ b/tpl/archive_month.html
@@ -21,6 +21,7 @@
 <tpl:Block name="body-tag"><body id="page-top" class="dc-archive-month"></tpl:Block>
 
 <tpl:Block name="main-content">
+	<h2 class="sr-only sr-only-focusable">{{tpl:lang Entries list}}</h2>
 	<nav class="navlinks topnl">
 		<tpl:ArchivePrevious><a href="{{tpl:ArchiveURL}}" class="prev">&#171; {{tpl:ArchiveDate encode_html="1"}}</a> - </tpl:ArchivePrevious>
 		{{tpl:ArchiveDate}}
