--- a/tpl/_pagination.html
+++ b/tpl/_pagination.html
@@ -1,5 +1,5 @@
 <tpl:Pagination>
-	<nav class="pagination" aria-label="{{tpl:lang Pagination}}" role="navigation">
+	<nav class="pagination" aria-label="{{tpl:lang Pagination}}">
 	  <tpl:PaginationIf end="0">
 		<a href="{{tpl:PaginationURL offset="+1"}}" class="prev"><span aria-hidden="true">&#171; </span>{{tpl:lang previous entries}}</a> -
 	  </tpl:PaginationIf>
