--- a/tpl/archive.html
+++ b/tpl/archive.html
@@ -21,7 +21,7 @@
 </tpl:Block>
 
 <tpl:Block name="main-content">
-	<h2 class="sr-only sr-only-focusable">{{tpl:lang Archives list}}</h2>
+	<h2 class="visually-hidden">{{tpl:lang Archives list}}</h2>
 	<header id="content-info">
 		<h2>{{tpl:lang Archives}}</h2>
 	</header>
