--- a/tpl/page.html
+++ b/tpl/page.html
@@ -9,6 +9,6 @@
 <tpl:Block name="body-tag"><body id="page-top" class="dc-page"></tpl:Block>
 
 <tpl:Block name="main-content">
-  <h2 class="sr-only sr-only-focusable">{{tpl:lang Page}}</h2>
+  <h2 class="visually-hidden">{{tpl:lang Page}}</h2>
   {{tpl:include src="_simple-entry.html"}}
 </tpl:Block>
