--- a/tpl/post.html
+++ b/tpl/post.html
@@ -36,7 +36,7 @@
 </tpl:Block>
 
 <tpl:Block name="main-content">
-	<h2 class="sr-only sr-only-focusable">{{tpl:lang Post}}</h2>
+	<h2 class="visually-hidden">{{tpl:lang Post}}</h2>
 	<nav class="navlinks topnl" role="navigation" aria-label="{{tpl:lang Entries}}">
 		<tpl:EntryPrevious><a href="{{tpl:EntryURL}}" class="prev"><span aria-hidden="true">&#171; </span><span class="sr">{{tpl:lang Previous entry:}} </span>{{tpl:EntryTitle encode_html="1"
 		 cut_string="50"}}</a></tpl:EntryPrevious>
