--- a/locales/en/help/help.html
+++ b/locales/en/help/help.html
@@ -1,18 +1,27 @@
 <html>
+
 <head>
   <title>Resume Theme Configuration</title>
 </head>
 
 <body>
 
-<h4>Profile image</h4>
+  <h4>Menu Simple</h4>
 
-<p>You can replace the left sidebar image by your own from your media manager. Click on <em>Change</em> button to choose the image and save your changes.
-  If you wish to use default profile image, click on <em>Reset</em> button.
-</p>
+  <p>Simple Menu plugin is used by the theme to manage the sidebar menu.</p>
 
-<h4>Main color</h4>
+  <p>Tip : to add a link to the widgets block, create a free menu item with a link to <code>#sidebar</code></p>
 
-<p>Choose a color for sidebar, links and buttons, and save. Default color is <strong>#BD5D38</strong></p>
+  <h4>Profile image</h4>
+
+  <p>You can replace the left sidebar image by your own from your media manager. Click on <em>Change</em> button to
+    choose the image and save your changes.
+    If you wish to use default profile image, click on <em>Reset</em> button.
+  </p>
+
+  <h4>Main color</h4>
+
+  <p>Choose a color for sidebar, links and buttons, and save. Default color is <strong>#BD5D38</strong></p>
 </body>
+
 </html>
