--- a/locales/fr/help/help.html
+++ b/locales/fr/help/help.html
@@ -1,17 +1,29 @@
 <html>
+
 <head>
   <title>Configuration du thème Resume</title>
 </head>
 
 <body>
 
-<h4>Image de profil</h4>
+  <h4>Menu simple</h4>
 
-<p>Vous pouvez remplacer l'image de la barre latérale par une image de votre médiathèque. Cliquez sur le bouton <em>Changer</em>, choisissez l'image, puis enregistrez.
-   Cliquez sur le bouton <em>Réinitialiser</em> pour utiliser l'image par défaut.</p>
+  <p>Le plugin Simple Menu est utilisé par le thème pour afficher le menu latéral.</p>
 
-<h4>Couleur principale</h4>
+  <p>Astuce : pour ajouter un lien vers le bloc des widgets, vous pouvez créer un élément de menu libre avec un lien vers
+    <code>#sidebar</code></p>
 
-<p>Choissez votre couleur principale et enregistrez. Cette couleur est utilisée pour la barre latérale, les liens et les boutons. La valeur par défaut est <strong>#BD5D38</strong></p>
+  <h4>Image de profil</h4>
+
+  <p>Vous pouvez remplacer l'image de la barre latérale par une image de votre médiathèque. Cliquez sur le bouton
+    <em>Changer</em>, choisissez l'image, puis enregistrez.
+    Cliquez sur le bouton <em>Réinitialiser</em> pour utiliser l'image par défaut.
+  </p>
+
+  <h4>Couleur principale</h4>
+
+  <p>Choissez votre couleur principale et enregistrez. Cette couleur est utilisée pour la barre latérale, les liens et
+    les boutons. La valeur par défaut est <strong>#BD5D38</strong></p>
 </body>
+
 </html>
