--- a/locales/en/help/help.html
+++ b/locales/en/help/help.html
@@ -6,11 +6,11 @@
 
 <body>
 
-  <h4>Menu Simple</h4>
+  <h4>Simple Menu</h4>
 
-  <p>Simple Menu plugin is used by the theme to manage the sidebar menu.</p>
+  <p>Simple Menu plugin is used by the theme to manage the top menu.</p>
 
-  <p>Tip : to add a link to the widgets block, create a free menu item with a link to <code>#sidebar</code></p>
+  <p>Tip : to add a link to the widgets block, create a free menu item with a link to <code>#menubar</code></p>
 
   <h4>Profile image</h4>
 
