--- a/locales/en/help/help.html
+++ b/locales/en/help/help.html
@@ -8,9 +8,9 @@
 
   <h4>Simple Menu</h4>
 
-  <p>Simple Menu plugin is used by the theme to manage the top menu.</p>
+  <p>Simple Menu plugin is used by the theme to manage the sidebar menu.</p>
 
-  <p>Tip : to add a link to the widgets block, create a free menu item with a link to <code>#menubar</code></p>
+  <p>Tip : to add a link to the widgets block, create a free menu item with a link to <code>#sidebar</code></p>
 
   <h4>Profile image</h4>
 
