Add social media links config

--- a/locales/fr/help/help.html
+++ b/locales/fr/help/help.html
@@ -10,8 +10,10 @@
 
   <p>Le plugin Simple Menu est utilisé par le thème pour afficher le menu latéral.</p>
 
-  <p>Astuce : pour ajouter un lien vers le bloc des widgets, vous pouvez créer un élément de menu libre avec un lien vers
-    <code>#sidebar</code></p>
+  <p>Astuce : pour ajouter un lien vers le bloc des widgets, vous pouvez créer un élément de menu libre avec un lien
+    vers
+    <code>#sidebar</code>
+  </p>
 
   <h4>Image de profil</h4>
 
@@ -24,6 +26,17 @@
 
   <p>Choissez votre couleur principale et enregistrez. Cette couleur est utilisée pour la barre latérale, les liens et
     les boutons. La valeur par défaut est <strong>#BD5D38</strong></p>
+
+  <h4>Liens vers les médias sociaux</h4>
+
+  <p>Les icônes s'afficheront en haut de l'écran. Vous devez indiquer pour chacune un libellé et l'URL correspondante.
+    (Laissez l'un de ces deux champs vide pour ne pas afficher l'icône).</p>
+
+  <p>Vous pouvez également modifier l'ordre d'affichage par tiré-lâché si javascript est actif et que vous ne l'avez pas
+    interdit dans vos préférences. Si javascript est désactivé, un champ supplémentaire permet d'indiquer l'ordre
+    d'affichage (de 1 à n).</p>
+
+
 </body>
 
 </html>
