--- a/tpl/__layout.html
+++ b/tpl/__layout.html
@@ -76,10 +76,7 @@
 				</div>
 				<p class="lead mb-5">{{tpl:BlogDescription}}</p>
 				<div class="social-icons">
-					<a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
-					<a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
-					<a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
-					<a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
+					{{tpl:resumeSocialLinks}}
 				</div>
 			</div>
 		</section>
