--- a/locales/en/help/help.html
+++ b/locales/en/help/help.html
@@ -22,6 +22,14 @@
   <h4>Main color</h4>
 
   <p>Choose a color for sidebar, links and buttons, and save. Default color is <strong>#BD5D38</strong></p>
+
+  <h4>Social links</h4>
+
+  <p>Icons will be displayed at the top of the screen. For each, you must enter a label and the corresponding URL.
+    (Leave one of these fields empty to avoid the icon display).</p>
+
+  <p>You may change the icons display order by grabbing and moving its line if javascript is enabled and allowed in your
+    preferences. If javascript is disabled, a field allows to indcate the icons' display order (from 1 to n).</p>
 </body>
 
 </html>
