--- a/locales/fr/help/help.html
+++ b/locales/fr/help/help.html
@@ -29,10 +29,12 @@
 
   <h4>Liens vers les médias sociaux</h4>
 
-  <p>Les icônes s'afficheront en haut de l'écran. Vous devez indiquer pour chacune un libellé et l'URL correspondante.
-    (Laissez l'un de ces deux champs vide pour ne pas afficher l'icône).</p>
+  <p>Les étiquettes s'afficheront en haut de l'écran. Vous devez indiquer pour chacune un libellé et l'URL
+    correspondante.
+    (Laissez l'un de ces deux champs vide pour ne pas afficher l'étiquette).</p>
 
-  <p>Vous pouvez également modifier l'ordre d'affichage par tiré-lâché si javascript est actif et que vous ne l'avez pas
+  <p>Vous pouvez également modifier l'ordre d'affichage des étiquettes par tiré-lâché si javascript est actif et que
+    vous ne l'avez pas
     interdit dans vos préférences. Si javascript est désactivé, un champ supplémentaire permet d'indiquer l'ordre
     d'affichage (de 1 à n).</p>
 
