--- a/locales/en/help/help.html
+++ b/locales/en/help/help.html
@@ -30,7 +30,7 @@
 
   <p>You may change the stickers display order by grabbing and moving their lines if javascript is enabled and allowed
     in your
-    preferences. If javascript is disabled, a field allows to indcate the stickers' display order (from 1 to n).</p>
+    preferences. If javascript is disabled, a field allows to indicate the stickers' display order (from 1 to n).</p>
 </body>
 
 </html>
