--- a/tpl/external.html
+++ b/tpl/external.html
@@ -30,11 +30,8 @@
                 </div>
                 <p class="lead mb-5">{{tpl:BlogDescription}}</p>
                 <div class="social-icons">
-                    <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                    <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
-                    <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
-                    <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
-                </div>
+					{{tpl:resumeSocialLinks}}
+				</div>
             </div>
         </section>
         <hr class="m-0">
