--- a/tpl/_entry-feedback.html
+++ b/tpl/_entry-feedback.html
@@ -54,7 +54,7 @@
 	</tpl:SysIfCommentPending>
 
 	<!-- # Comment form -->
-	<form class="comment-form" action="{{tpl:EntryURL}}#pr" method="post" id="comment-form" role="form">
+	<form class="comment-form" action="{{tpl:EntryURL}}#pr" method="post" id="comment-form">
 		<tpl:IfCommentPreview>
 			<div id="pr">
 				<h3>{{tpl:lang Your comment}}</h3>
