--- a/tpl/password-form.html
+++ b/tpl/password-form.html
@@ -34,7 +34,7 @@
 </head>
 
 <body id="page-top">
-	<form action="{{tpl:EntryURL}}" method="post" role="form">
+	<form action="{{tpl:EntryURL}}" method="post">
 		<h2>{{tpl:lang Password needed}}</h2>
 		<p>{{tpl:lang You must give a password to access this area.}}</p>
 		<p>
