--- a/tpl/post.html
+++ b/tpl/post.html
@@ -37,7 +37,7 @@
 
 <tpl:Block name="main-content">
 	<h2 class="visually-hidden">{{tpl:lang Post}}</h2>
-	<nav class="navlinks topnl" role="navigation" aria-label="{{tpl:lang Entries}}">
+	<nav class="navlinks topnl" aria-label="{{tpl:lang Entries}}">
 		<tpl:EntryPrevious><a href="{{tpl:EntryURL}}" class="prev"><span aria-hidden="true">&#171; </span><span class="sr">{{tpl:lang Previous entry:}} </span>{{tpl:EntryTitle encode_html="1"
 		 cut_string="50"}}</a></tpl:EntryPrevious>
 		<tpl:EntryNext> <span>-</span> <a href="{{tpl:EntryURL}}" class="next"><span class="sr">{{tpl:lang Next entry:}} </span>{{tpl:EntryTitle encode_html="1" cut_string="50"}}<span aria-hidden="true"> &#187;</span></a></tpl:EntryNext>
@@ -45,7 +45,7 @@
 
 	{{tpl:include src="_simple-entry.html"}}
 
-	<nav class="navlinks" role="navigation" aria-label="{{tpl:lang Entries}}">
+	<nav class="navlinks" aria-label="{{tpl:lang Entries}}">
 		<tpl:EntryPrevious><a href="{{tpl:EntryURL}}" class="prev"><span aria-hidden="true">&#171; </span><span class="sr">{{tpl:lang Previous entry:}} </span>{{tpl:EntryTitle encode_html="1"
 		 cut_string="50"}}</a></tpl:EntryPrevious>
 		<tpl:EntryNext> <span>-</span> <a href="{{tpl:EntryURL}}" class="next"><span class="sr">{{tpl:lang Next entry:}} </span>{{tpl:EntryTitle encode_html="1" cut_string="50"}}<span aria-hidden="true"> &#187;</span></a></tpl:EntryNext>
