--- a/tpl/search.html
+++ b/tpl/search.html
@@ -56,7 +56,7 @@
 
 			<tpl:EntriesFooter>
 				<tpl:Pagination>
-					<nav class="pagination" aria-label="{{tpl:lang Pagination}}" role="navigation">
+					<nav class="pagination" aria-label="{{tpl:lang Pagination}}">
 						<tpl:PaginationIf end="0">
 							<a href="{{tpl:PaginationURL offset="+1"}}" class="prev"><span aria-hidden="true">&#171;
 								</span>{{tpl:lang previous entries}}</a> -
