Get back smooth scrolling

--- a/tpl/_footer.html
+++ b/tpl/_footer.html
@@ -13,4 +13,7 @@
 <script src="{{tpl:BlogThemeURL}}/js/scripts.js"></script>
 {{tpl:SysBehavior behavior="publicFooterContent"}}
 
+<!-- Third party plugin JS-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+
 {{tpl:include src="user_footer.html"}}
