Remove {{tpl:BlogRSDURL}}

--- a/tpl/__layout.html
+++ b/tpl/__layout.html
@@ -35,23 +35,19 @@
 				<tpl:EntriesHeader>
 					<tpl:Pagination>
 						<tpl:PaginationIf end="0">
-							<link rel="prev" title="{{tpl:lang previous entries}}" href="{{tpl:PaginationURL offset="
-								1"}}" />
+							<link rel="prev" title="{{tpl:lang previous entries}}" href="{{tpl:PaginationURL offset="1"}}" />
 						</tpl:PaginationIf>
 
 						<tpl:PaginationIf start="0">
-							<link rel="next" title="{{tpl:lang next entries}}" href="{{tpl:PaginationURL offset="
-								-1"}}" />
+							<link rel="next" title="{{tpl:lang next entries}}" href="{{tpl:PaginationURL offset="-1"}}" />
 						</tpl:PaginationIf>
 					</tpl:Pagination>
 				</tpl:EntriesHeader>
 
-				<link rel="chapter" href="{{tpl:EntryURL}}" title="{{tpl:EntryTitle encode_html=" 1"}}" />
+				<link rel="chapter" href="{{tpl:EntryURL}}" title="{{tpl:EntryTitle encode_html="1"}}" />
 			</tpl:Entries>
 
-			<link rel="alternate" type="application/atom+xml" title="Atom 1.0" href="{{tpl:BlogFeedURL type="
-				atom"}}" />
-			<link rel="EditURI" type="application/rsd+xml" title="RSD" href="{{tpl:BlogRSDURL}}" />
+			<link rel="alternate" type="application/atom+xml" title="Atom 1.0" href="{{tpl:BlogFeedURL type="atom"}}" />
 			<link rel="meta" type="application/xbel+xml" title="Blogroll" href="{{tpl:BlogrollXbelLink}}" />
 		</tpl:Block> <!-- # head-linkrel -->
 
