fix blog description html

--- a/tpl/external.html
+++ b/tpl/external.html
@@ -28,7 +28,7 @@
                 <div class="subheading mb-5">
 
                 </div>
-                <p class="lead mb-5">{{tpl:BlogDescription}}</p>
+                <p class="lead mb-5">{{tpl:BlogDescription encode_html="1" remove_html="1"}}</p>
                 <div class="social-icons">
 					{{tpl:resumeSocialLinks}}
 				</div>
