--- a/locales/en/help/help.html
+++ b/locales/en/help/help.html
@@ -21,7 +21,7 @@
 
   <h4>Main color</h4>
 
-  <p>Choose a color for sidebar, links and buttons, and save. Default color is <strong>#BD5D38</strong></p>
+  <p>Choose a color for sidebar, links and buttons, and save. Default color is <strong>#bd5d38</strong></p>
 
   <h4>Social links</h4>
 
