--- a/locales/fr/help/help.html
+++ b/locales/fr/help/help.html
@@ -25,7 +25,7 @@
   <h4>Couleur principale</h4>
 
   <p>Choissez votre couleur principale et enregistrez. Cette couleur est utilisée pour la barre latérale, les liens et
-    les boutons. La valeur par défaut est <strong>#BD5D38</strong></p>
+    les boutons. La valeur par défaut est <strong>#bd5d38</strong></p>
 
   <h4>Liens vers les médias sociaux</h4>
 
